# MinecordStatusBot

./: Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml
